# whatsapp-msgstore-viewer

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  version.py
Utility/: Utils.py
View/LoginScreen/: about.kv  login_screen.py
